test/fixtures/error/layouts/error-layout.vue
<template>
  <div>
    <header>Error layout</header>
    <nuxt />
  </div>
</template>

<script>
export default {
  name: 'Empty'
}
</script>
